bk_ida/gccida/g0/nonzero_bits
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/combine.c:8417:40: error: must use 'enum' tag to refer to type 'machine_mode'
unsigned __int64  nonzero_bits( rtx x, machine_mode mode) 
                                       ^
                                       enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/combine.c:8434:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+4h] [rbp-BCh] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/combine.c:8449:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+6Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/combine.c:8464:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_FLOAT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/combine.c:8465:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/combine.c:8466:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_VECTOR_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/combine.c:8467:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[mode] == MODE_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/combine.c:8468:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[mode] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/combine.c:8469:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[mode] == MODE_VECTOR_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/combine.c:8490:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2)) & nonzero; 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/combine.c:8517:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[reg_last_set_mode[x->fld[0].rtuint]] == MODE_INT && mode_class_0[modea] == MODE_INT) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/combine.c:8517:69: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[reg_last_set_mode[x->fld[0].rtuint]] == MODE_INT && mode_class_0[modea] == MODE_INT) 
                                                                    ^~~~~~~~~~~~
                                                                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/combine.c:8542:48: error: use of undeclared identifier 'machine_mode'
nonzero = v14 & nonzero_bits( x->fld[0].rtx, ( machine_mode)*( ( unsigned __int8 *)x + 2)); 
                                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/combine.c:8716:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[modea] == MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/nonzero_bits/src/obj/combine.o] Error 1
